# sennen

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml  tests.yml
data/pages/: index.html  kanji.html
data/ressources/: index.html  kanji.html
data/ressources/js/: common.js
ressources/static/js/: common.js
ressources/templates/: base.jinja  index.jinja  kanji.jinja  word.jinja
ressources/templates/components/: loading.jinja
ressources/templates/scripts/: index.js  kanji.js  tailwind.config.js  toggle_darkmode.js  word.js
sennen/: download_dicts.py  generate.py  main.py
sennen/parse/: kanji.py  word.py
src/: download_dicts.py
src/sennen/: download_dicts.py  generate.py  main.py
src/sennen/parse/: common.py  kanji.py  word.py
tests/: conftest.py  test_api.py  test_tests.py
